bug fixes: time overflow and scroll overflow

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     width: 100vw;
     min-height: 100vh;
     background-color: whitesmoke;
+    overflow-x: hidden;
 }
 
 main {
